# shells

./: a.sh  ap_mode  aplay_demo.sh  deal.sh  deal.sh.bak  get.sh  move_pkg.sh  passwd  ping.sh  resetConfig.sh  restore  sftp.sh  shells.kdev4  start.sh  system_settings.xml  test.sh  wire.sh
.kdev4/: shells.kdev4
head_control/: 97-usbserials-motor.rules  CMakeLists.txt  dynamixel_head_control.cpp  head_control.cpp  head_control.kdev4  head_control.xml  head_control_factory.cpp  head_control_settings.cpp  interface_head_control.cpp  main_head_control.cpp  smsbl_head_control.cpp  smsbl_motor.cpp  type_detection.cpp
head_control/.kdev4/: head_control.kdev4
head_control/include/: dynamixel_head_control.h  empty_head_control.h  head_control.h  head_control_factory.h  head_control_settings.h  interface_head_control.h  smsbl_head_control.h  smsbl_motor.h  type_detection.h
task/: bluetooth.sh  copy_b150_rules.sh  copy_b250_rules.sh  data_transfer.sh  head_control.sh  import_data.sh  installdeb.sh  network.sh  recognition.sh  sideview_check.sh  sideview_check_test  start.sh  stop.sh  task.kdev4  wire.sh  wire_doorcontrol.sh
task/.kdev4/: task.kdev4
tts/: CMakeLists.txt  main.cpp
tts/include/: tts.h
tts/msc/de17c7587f761db3c054f7cde080f032/: cfg.ldata
tts/res/: xiaofeng.jet  xiaoyan.jet
tts/src/: tts.cpp
